# FinanceApp

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  env-template.env  hello.py  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js
account/: models.py
account/migrations/: 0001_initial.py
budget/: admin.py  forms.py  models.py  urls.py  views.py
budget/migrations/: 0001_initial.py  0002_account_user_alter_account_account_type_and_more.py  0002_budgetitem_transactions.py  0003_alter_budgetitem_budget_category_and_more.py  0004_alter_account_account_type.py  0005_uploadedfile_alter_account_account_type.py  0006_alter_account_account_type.py  0007_uploadedfile_user_alter_account_account_type.py  0008_alter_account_account_type.py  0009_alter_account_account_type.py  0010_alter_account_account_type.py  0011_alter_account_account_type.py  0012_alter_account_account_type.py  0013_alter_account_account_type.py  0014_alter_account_account_type.py  0015_alter_account_account_type_and_more.py  0016_alter_account_account_type.py  0017_alter_account_account_type.py  0018_alter_account_account_type.py  0019_alter_account_account_type.py  0020_alter_account_account_type.py  0021_alter_account_account_type.py  0022_alter_account_account_type.py  0023_alter_account_account_type.py  0024_alter_account_account_type.py  0025_alter_account_account_type.py  0026_alter_account_account_type.py  (+5 more)
category/: models.py
finance_app/: settings.py  urls.py
transactions/: models.py  views.py
(+32 files in other folders)
